# xds

./: MODULE.bazel
bazel/: repositories.bzl  repository_locations.bzl
go/: go.sum
go/udpa/data/orca/v1/: orca_load_report.pb.go
go/udpa/service/orca/v1/: orca.pb.go  orca_grpc.pb.go
python/: pyproject.toml
python/udpa/annotations/: migrate_pb2.py  security_pb2.py  sensitive_pb2.py  status_pb2.py  versioning_pb2.py
python/udpa/data/orca/v1/: orca_load_report_pb2.py
python/udpa/service/orca/v1/: orca_pb2.py
python/udpa/type/v1/: typed_struct_pb2.py
python/xds/annotations/v3/: migrate_pb2.py  security_pb2.py  sensitive_pb2.py  status_pb2.py  versioning_pb2.py
python/xds/core/v3/: authority_pb2.py  cidr_pb2.py  collection_entry_pb2.py  context_params_pb2.py  extension_pb2.py  resource_locator_pb2.py  resource_name_pb2.py  resource_pb2.py
python/xds/data/orca/v3/: orca_load_report_pb2.py
python/xds/service/orca/v3/: orca_pb2.py
python/xds/type/matcher/v3/: cel_pb2.py  domain_pb2.py  http_inputs_pb2.py  ip_pb2.py  matcher_pb2.py  range_pb2.py  regex_pb2.py  string_pb2.py
python/xds/type/v3/: cel_pb2.py  range_pb2.py  typed_struct_pb2.py
xds/core/v3/: authority.proto  cidr.proto  resource_locator.proto  resource_name.proto
xds/type/matcher/v3/: matcher.proto  regex.proto  string.proto
xds/type/v3/: range.proto
